--- a/instore/static/style.css
+++ b/instore/static/style.css
@@ -21,7 +21,7 @@ body{
     overflow: hidden;
 }
 .container_home1 .buttons{
-        margin: 150px 140px ;
+        margin: 140px 105px ;
         height: 30vh;
         width: 40vh;
         display: flex;
@@ -29,27 +29,25 @@ body{
         align-items: center;
         justify-content: center;
 }
-.buttons a:hover{
-        transform: scale(1.5); 
-}
-.buttons a{
-        width: 100%;
-        height: 100%;
-        padding: 10px;
-        box-shadow: 4px 4px 30px rgba(0,0,0,0.3);
-        outline: none;
-        color: #fff;
-        background: linear-gradient(135deg,#71b7e6,#9b59b6);
-        border: none;
-        font-weight: 250;
-        letter-spacing: 5px;
-        border-radius: 2px;
-        cursor: pointer;
-        text-decoration: none; 
-        border-width: 100px;
-        text-align: center;
-        transition: all .5s ease;
-}
+.container_home1 .buttons .block {
+    height: auto;
+    display: block;
+    width: 100%;
+    border: none;
+    background-color: #7507a0;
+    color: #f7f3f9;
+    padding: 14px 28px;
+    font-size: 20px;
+    cursor: pointer;
+    text-align: center;
+    border-radius: 4px;
+    font-weight:bolder;
+  }
+  
+.container_home1 .buttons  .block:hover {
+    background-color: #871db0;
+    color: rgb(236, 226, 226);
+  }
 .container{
     max-width: 700px;
     width: 100%;
@@ -93,6 +91,7 @@ form .user_details .input_box{
     border-bottom-width: 2px;
     transition: all 0.3s ease;
 }
+
 .user_details .input_box .details{
     font-weight: 500;
     display: block;
@@ -103,21 +102,22 @@ form .user_details .input_box{
     border-color: #9b59b6;
 }
 form .button{
-    height: 45px;
-    margin: 10px 0 ;
-}
-form .button input{
+    height: auto;
     width: 100%;
-    height: 100%;
-    outline: none;
-    color: #fff;
-    background: linear-gradient(135deg,#71b7e6,#9b59b6);
     border: none;
-    font-weight: 500;
-    letter-spacing: 2px;
-    border-radius: 5px;
+    background-color: #7507a0;
+    color: #f7f3f9;
+    padding: 14px 28px;
+    font-size: 20px;
     cursor: pointer;
+    text-align: center;
+    border-radius: 4px;
+    font-weight:bolder;
 }
+form .button:hover {
+    background-color: #871db0;
+    color: rgb(236, 226, 226);
+  }
 form .button3{
     height: 45px;
     margin: 10px 0 ;
