--- a/instore/templates/home.html
+++ b/instore/templates/home.html
@@ -1,23 +1,36 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home_page1</title>
     <link rel="stylesheet" href={% static 'style.css' %}>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <section class="container_home1">
       <div class="buttons">
-          <button type="button" class="block" onclick="location.href='{% url 'recognize_me' %}'">ADD LOAN</button><br><br>
-          <button class="block">VIEW LOAN</button><br><br>
-          <button class="block">LOAN</button><br><br>
+        <button
+          type="button"
+          class="block"
+          onclick="location.href='{% url 'recognize_me' %}'"
+        >
+          ADD LOAN</button
+        ><br /><br />
+        <a class="block" href="{% url 'Viewrecord' %}">VIEW LOAN</a>
+        
+          
+          
+    </a><br /><br />
+        <button class="block">LOAN</button><br /><br />
       </div>
     </section>
-</body>
+  </body>
 </html>
