--- a/instore/templates/home_page2.html
+++ b/instore/templates/home_page2.html
@@ -33,8 +33,8 @@
                 <input type="text" placeholder="Gold/Silver" name="item_type"  required>
             </div>
             <div class="input_box">
-                <span class="details" name="description">Description</span>
-                <input type="text">
+                <span class="details">Description</span>
+                <input type="text" name="description">
             </div>
             <div>
                 <label class="checkbox" for="myCheckboxId"></label>
