everything working perfectly fine and good upto printing the bill

--- a/instore/templates/loan.html
+++ b/instore/templates/loan.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div>
-      {% for c in customer %} {{ c.name }} {{ c.address }} {{ c.amount }} {{
-      c.item_type }} {{ c.description }} {{ c.loan_date }} {% endfor %}
+      {{ c.name }} {{ c.address }} {{ c.amount }} {{ c.item_type }} {{
+      c.description }} {{ c.loan_date }}
     </div>
   </body>
 </html>
