fixed date issue

--- a/instore/templates/home_page3.html
+++ b/instore/templates/home_page3.html
@@ -26,25 +26,25 @@
             <div class="user_details">
                 <div class="input_box">
                     <span class="details">Loan Id</span>
-                    <input type="number" required value= {{ c.id }}>
+                    <input type="number" required value= "{{ c.id }}">
                     
 
                 </div>
                 <div class="input_box">
                     <span class="details">Date and Time</span>
-                    <input type="text" required value= {{ c.loan_date }}>
+                    <input  required value= "{{ c.loan_date }}">
                 </div>
                 <div class="input_box">
                     <span class="details">Name</span>
-                    <input type="text" required value= {{ c.name }}>
+                    <input type="text" required value= "{{ c.name }}">
                 </div>
                 <div class="input_box">
                     <span class="details">Amount</span>
-                    <input type="text"  required value= {{ c.amount }}>
+                    <input type="text"  required value= "{{ c.amount }}">
                 </div>
                 <div class="input_box">
                     <span class="details">Description</span>
-                    <input type="text" value= {{ c.description }}>
+                    <input type="text" value= "{{ c.description }}">
                 </div>
                 <div class="button3">
                     <input type="button" id="button1" value="PRINT">
